Refactored resolvers. Updated datamodel and schema. Included a utils file for repetative code.

--- a/prisma/prisma.yml
+++ b/prisma/prisma.yml
@@ -9,3 +9,7 @@ generate:
   - generator: javascript-client
     output: ../src/generated/prisma-client
 
+#Autorun Prisma Generate after deploying
+hooks: 
+  post-deploy:
+    - prisma generate
