--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test_graphQL": "nodemon src/index.js"
+    "test_server": "nodemon src/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.16.4",
     "graphql-yoga": "^1.17.4",
+    "jsonwebtoken": "^8.4.0",
     "prisma-client-lib": "^1.26.6"
   }
 }
