--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "graphql_api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "server": "nodemon src/index.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "express": "^4.16.4",
-    "graphql-yoga": "^1.17.4",
-    "jsonwebtoken": "^8.4.0",
-    "prisma-client-lib": "^1.26.6"
-  }
+	"name": "graphql_api",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"start": "node src/index.js"
+	},
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"bcryptjs": "^2.4.3",
+		"express": "^4.16.4",
+		"graphql-yoga": "^1.17.4",
+		"jsonwebtoken": "^8.4.0",
+		"prisma-client-lib": "^1.26.6"
+	}
 }
