--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"express": "^4.16.4",
 		"graphql-yoga": "^1.17.4",
 		"jsonwebtoken": "^8.4.0",
+		"morgan": "^1.9.1",
 		"prisma-client-lib": "^1.26.6"
 	}
 }
